--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HTML</title>
+  <title>GameSetter</title>
 
   <!-- icofont-css-link -->
   <link rel="stylesheet" href="css/icofont.min.css" />
@@ -25,6 +25,24 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+   <!-- Google tag (gtag.js) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-J0MYHN79FP"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     gtag('config', 'G-J0MYHN79FP');
+   </script>
+ 
+   <!-- Microsoft Clarity tracking code -->
+   <script type="text/javascript">
+     (function(c,l,a,r,i,t,y){
+         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+         t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+     })(window, document, "clarity", "script", "n59pjr3sls");
+   </script>
 </head>
 
 <body>
@@ -1150,6 +1168,25 @@
   <script src="js/main.js"></script>
 
   <script>
+    // Function to track clicks on elements with onclick attributes
+function trackOnClick(event) {
+  // Check if the clicked element has an onclick attribute
+  if (event.target.getAttribute('onclick')) {
+    // Extract the onclick attribute value
+    var onClickAttributeValue = event.target.getAttribute('onclick');
+    
+    // Track the click event in Google Analytics
+    gtag('event', 'click', {
+      'event_category': 'General Click',
+      'event_label': onClickAttributeValue,
+      'value': 1
+    });
+  }
+}
+
+// Event listener for clicks on the entire document
+document.addEventListener('click', trackOnClick);
+
     $('#typed').typed({
       strings: [
         'Your Game',
