email changes done

--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                 </form>
               </div>
               <ul class="contact_info">
-                <li><a href="mailto:">aspire@verdant.com</a></li>
+                <li><a href="mailto:">hello@gamesetter.in</a></li>
                 <li><a href="tel: ">+1-900-123 4567</a></li>
               </ul>
               <ul class="social_media">
@@ -1081,7 +1081,6 @@
             video.pause();
             video.currentTime = 0; // Reset video to beginning
         }
-
         // Hide the modal
         $("#miModal").modal("hide");
         // Adjust opacity of modal backdrop
